# GEM-cublas

GEM_OpenMP_GPU_CUBLAS_0119/: Makefile-ascent-omp-cpu  Makefile-summit-omp-gpu-nvhpc-cublas  adios2_comm_module.mod  assert_mod.mod  batched_mod.mod  coupling_core_edge.mod  cublasZStridedBatched.cpp  gem_com.F90  gem_com.mod  gem_equil.mod  gem_fft_wrapper.mod  gem_gkps_adi.F90  gem_pputil.mod  mapping.mod  omp_module.mod
GEM_OpenMP_GPU_cublas/: Makefile-cori-omp  Makefile-cori-omp-cublas  Makefile-summit-omp-gpu-nvhpc-cublas  gem_com.F90  gem_gkps_adi.F90  gem_gkps_adi_backup.F90
GEM_OpenMP_GPU_origin/: .gitignore  Makefile-ascent-omp-cpu  Makefile-ascent-omp-gpu  Makefile-cori-omp-cpu  Makefile-spock-omp-gpu  Makefile-summit-omp-gpu-nvhpc  Makefile-summit-omp-gpu-spock  gem_com.F90  gem_gkps_adi.F90  gem_main.F90  gem_pputil.F90  gem_pputil_0801.F90  gem_pputil_backup.F90  gem_pputil_cpu_omp_0807.F90  gem_pputil_ompcommented.F90  mapping.F90  pushe.F90
batched_blas_Ed/: Makefile.cublas  assert_mod.mod  batched_mod.mod  job-cori-gpu-omp.sh  make.inc.cublas  run.out  test_batched  test_batched_mod.mod
dfftpack/: .gitignore
pspline-gpu/: .gitignore  ALL_ARCH.mk  CMakeLists.txt  EzSpline_HowTo  EzSpline_README  Makefile-summit-nvhpc  Pspline.py  bcspgrid.f  cspeval.f  cspline.f  czhybrid_init.F90  czspline_capi.h  czspline_derivative.F90  czspline_free.F90  czspline_gradient.F90  czspline_init.F90  czspline_interp.F90  czspline_isgridregular.F90  czspline_isindomain.F90  czspline_pointer_types.F90  czspline_setters.F90  czspline_setup.F90  czspline_test.cc  evintrp2d.f  evspline.f  ezspline_cinterp.f90  ezspline_derivative.f90  ezspline_gradient.f90  ezspline_interp.f90  ezspline_mod.f90  f2test.f  f3test.f  graph  gridbicub.f  gridherm1.f  gridherm2.f  gridherm3.f  gridintrp2d.f  gridintrp3d.f  gridpc1.f  (+54 more)
test-case-mpi-6-gpu-nvhpc-omp/: job-ascent.sh
test-case-mpi-6-gpu-spock-omp/: job-spock.sh
